--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "bluebird": "~1.2.3",
     "browserify": "10.0.0",
-    "coffee-script": "~1.9.2",
+    "coffee-script": "^1.10.0",
     "coffeeify": "^1.1.0",
     "express": "3.2.5",
     "phantomjs": "~1.9.7-5",
